--- a/src/components/Link/link.css
+++ b/src/components/Link/link.css
@@ -45,7 +45,7 @@
 
 .link:focus,
 .link:hover {
-  box-shadow: 2px 2px 6px 4px #bbb9be;
+  background-color: var(--color-primary_hover);
 }
 
 .link--inline:hover,
